syntax = "proto3";
package data;
option go_package = "/data";

message Data {
    int32  SensorValue = 1;
    int32  ID1 = 2;
    string ID2 = 3;
    int64  timestamp = 4;
}

message Collection {
    repeated Data data = 1;
}

message Request {
    int32  ID1 = 1;
    string ID2 = 2;
    int32  StartTimestamp = 3;
    int64  EndTimestamp = 4;
}

service RetrieveDataService {
    rpc RetrieveData(Request) returns (Collection) {}
}